# xmalab

./: .gitignore  CMakeLists.txt  README  README.md  buildMac.sh  license.txt
.github/prompts/: tahoFix.prompt.md
cmake/: FindLevmar.cmake  FindQCustomPlot.cmake  FindQuaZip - Copy.cmake
deployment/MAC/: README.txt  XMALab-Icon.icns  build.sh  bundleRefsIteratively.sh  createDMG.sh  xmalab.json  xmalab_template.json
deployment/MAC/old tools/: audit_macdeploy.sh  bundleDependencies.sh  bundle_log.txt
deployment/VS2013/: README.txt  xmalab_installer_generator.sln
deployment/VS2013/xmalab_installer_generator/: xmalab_installer_generator.vdproj
deployment/VS2017/: XMALab_installer_generator.sln
deployment/VS2017/XMALab_installer_generator/: XMALab_installer_generator.vdproj
deployment/Windows_NSIS/: XMALabInstaller.nsi
matlab-scripts/: convertPtoXMA.m  example.m  saveMayaCam.m
matlab-scripts/for_code_generation/PnP/: GPnP.m  compute3DFromPlucker.h  computeCoefficiants.h  eigencomp.m  get3DPoint.m  getCoefficiantsL3.h  getCoefficiantsL3_5.h  getCoefficiantsL3_6.h  getCoefficiantsL3_6b.h  getCoefficiantsL3_7.h  getL.h  prepareK.m  test.m
matlab-scripts/for_code_generation/multi-camera-optimization/: SymbolicReprojectionErrorNoDistortion.m  SymbolicReprojectionErrorNoDistortionSeperateDimensions.m  SymbolicReprojectionErrorNoDistortionSeperateDimensionsSquared.m  SymbolicReprojectionErrorNoDistortionSquared.m  SymbolicReprojectionErrorWithDistortion.m  computeError.m  computeError2.m  computeError3.m  computeError4.m  jacFuncNoDistortion.h  jacFuncNoDistortion.m  jacFuncNoDistortionSeperateDimensions.h  jacFuncNoDistortionSeperateDimensions.m  jacFuncNoDistortionSquared.h  jacFuncNoDistortionSquared.m  jacFuncWithDistortion.h  jacFuncWithDistortion.m  multTrans.m  optimizeMulticamNoDistortion.m  optimizeMulticamWithDistortion.m  projFuncNoDistortion.h  projFuncNoDistortion.m  projFuncNoDistortionSeperateDimensions.h  projFuncNoDistortionSeperateDimensions.m  projFuncNoDistortionSquared.h  projFuncNoDistortionSquared.m  (+2 more)
src/: CMakeLists.txt
src/core/: AviVideo.cpp  AviVideo.h  CalibrationImage.cpp  CalibrationImage.h  CalibrationObject.cpp  CalibrationObject.h  CalibrationSequence.cpp  CalibrationSequence.h  Camera.cpp  Camera.h  CineVideo.cpp  CineVideo.h  EventData.cpp  EventData.h  HelperFunctions.cpp  HelperFunctions.h  Image.cpp  Image.h  ImageSequence.cpp  ImageSequence.h  Marker.cpp  Marker.h  MarkerFrameData.cpp  MarkerFrameData.h  MarkerFrameDataCam.cpp  MarkerFrameDataCam.h  Project.cpp  Project.h  RigidBody.cpp  RigidBody.h  RigidBodyObj.cpp  RigidBodyObj.h  Settings.cpp  Settings.h  Trial.cpp  Trial.h  UndistortionObject.cpp  UndistortionObject.h  VideoStream.cpp  VideoStream.h  (+1 more)
src/gl/: BlendShader.cpp  BlendShader.h  CMakeLists.txt  DistortionShader.cpp  DistortionShader.h  FrameBuffer.cpp  FrameBuffer.h  GLFunctions.h  GLMLoader.cpp  GLMLoader.h  GLPrimitives.cpp  GLPrimitives.h  LitColorShader.cpp  LitColorShader.h  MeshShader.cpp  MeshShader.h  MultisampleFrameBuffer.cpp  MultisampleFrameBuffer.h  Shader.cpp  Shader.h  ShaderManager.cpp  ShaderManager.h  SimpleColorShader.cpp  SimpleColorShader.h  TexturedQuadShader.cpp  TexturedQuadShader.h  VertexBuffer.cpp  VertexBuffer.h
src/processing/: BlobDetection.cpp  BlobDetection.h  ButterworthLowPassFilter.cpp  ButterworthLowPassFilter.h  Calibration.cpp  Calibration.h  CheckerboardDetection.cpp  CheckerboardDetection.h  CubeCalibration.cpp  CubeCalibration.h  DenoiseTrial.cpp  DenoiseTrial.h  FilterImage.cpp  FilterImage.h  GPnP.cpp  GPnP.h  LocalUndistortion.cpp  LocalUndistortion.h  MarkerDetection.cpp  MarkerDetection.h  MarkerTracking.cpp  MarkerTracking.h  MultiCameraCalibration.cpp  MultiCameraCalibration.h  RigidBodyPoseFrom2D.cpp  RigidBodyPoseFrom2D.h  RigidBodyPoseOptimization.cpp  RigidBodyPoseOptimization.h  ThreadScheduler.cpp  ThreadScheduler.h  ThreadedProcessing.cpp  ThreadedProcessing.h  UpdateTrialFrame.cpp  UpdateTrialFrame.h  cubic.h
src/ui/: AboutDialog.cpp  AboutDialog.h  CMakeLists.txt  CalibrationInfoFrame.cpp  CalibrationInfoFrame.h  CameraBox.cpp  CameraBox.h  CameraBoxTrial.cpp  CameraBoxTrial.h  CameraSelector.cpp  CameraSelector.h  CameraViewDetailWidget.cpp  CameraViewDetailWidget.h  CameraViewWidget.cpp  CameraViewWidget.h  ConfirmationDialog.cpp  ConfirmationDialog.h  ConsoleDockWidget.cpp  ConsoleDockWidget.h  DenoiseDialog.cpp  DenoiseDialog.h  DetailViewDockWidget.cpp  DetailViewDockWidget.h  DetectionSettings.cpp  DetectionSettings.h  DigitizationInfoFrame.cpp  DigitizationInfoFrame.h  DisplayOptionsDockWidget.cpp  DisplayOptionsDockWidget.h  ErrorDialog.cpp  ErrorDialog.h  EventDockWidget.cpp  EventDockWidget.h  ExternalCalibrationFrame.cpp  ExternalCalibrationFrame.h  FromToDialog.cpp  FromToDialog.h  GLCameraView.cpp  GLCameraView.h  GLSharedWidget.cpp  (+77 more)
src/ui/qml/: CameraOverlayScene.qml  WorldViewScene.qml
src/ui/quick3d/: CMakeLists.txt  CameraOverlaySceneBridge.cpp  CameraOverlaySceneBridge.h  Quick3DRendererControl.cpp  Quick3DRendererControl.h  WorldViewSceneBridge.cpp  WorldViewSceneBridge.h
src/ui/resource-files/icons/: XMALab-Icon.icns
src/ui/ui-files/: AboutDialog.ui  CMakeLists.txt  CalibrationInfoFrame.ui  CameraBox.ui  CameraBoxTrial.ui  CameraSelector.ui  CameraViewDetailWidget.ui  CameraViewWidget.ui  ConfirmationDialog.ui  ConsoleDockWidget.ui  DenoiseDialog.ui  DetailViewDockWidget.ui  DetectionSettings.ui  DetectionSettingsDialog.ui  DigitizationInfoFrame.ui  DisplayOptionsDockWidget.ui  ErrorDialog.ui  EventDockWidget.ui  ExternalCalibrationFrame.ui  FromToDialog.ui  HelpDialog.ui  ImportExportPointsDialog.ui  MainWindow.ui  MarkerDialog.ui  MetaDataInfo.ui  NewProjectDialog.ui  NewTrialDialog.ui  OptimizationDialog.ui  PlotWindow.ui  PointImportExportDialog.ui  PointsDockWidget.ui  Points_dockwidget.ui  ProgressDialog.ui  ProgressDockWidget.ui  ProjectOverview.ui  RigidBodyDialog.ui  SequenceNavigationFrame.ui  SettingsDialog.ui  StatusColorDialog.ui  TrialDialog.ui  (+12 more)
test_opengl/: CMakeLists.txt  main.cpp  native_test  native_test.m
(+44 files in other folders)
