ADD_SUBDIRECTORY(ui-files)
ADD_SUBDIRECTORY(quick3d)

FILE(GLOB SOURCE_LOCAL RELATIVE ${CMAKE_SOURCE_DIR}
    "*.cpp"
)

FILE(GLOB HEADERS_LOCAL RELATIVE ${CMAKE_SOURCE_DIR}
    "*.h"
)

SET(XMALAB_SOURCES
	${XMALAB_SOURCES}
	${HEADERS_LOCAL}
    ${SOURCE_LOCAL}
	PARENT_SCOPE
)

SET(XMALab_FORMS
	${XMALab_FORMS}
	PARENT_SCOPE
)